# Geotrek-admin

./: .codecov.yml  .coveragerc  .dockerignore  .env  .env-dev.dist  .env-prod.dist  .env.dist  .env.override  .flake8  .gitignore  .gitmodules  .psql_history  .pylint.rc  .readthedocs.yaml  .travis.yml  201806251645-geotrekdb.backup  AGENTS.md  AUTHORS.rst  CHANGES  CNAME  Dockerfile  DockerfileFocal  Geotrek-admin.run  HELP_SALT.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO  VERSION  buildout-dev.cfg  buildout-prod.cfg  buildout-tests.cfg  buildout.cfg  codecov.yml  config.yml  cypress.json  deplace_settings.py  dev-requirements.in  (+29 more)
.circleci/: config.yml  default.debconf
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: dependencies.yml  doc.yml  frontend.yml  lint.yml  release.yml  test.yml
.salt/: .gitignore  000_prereqs.sls  100_buildout.sls  100_install.sls  200_up.sls  200_wirenginx.sls  400_systemwire.sls  500_conversions.sls  500_customizations.sls  500_gtrois.sls  500_nginx.sls  PILLAR.sample  archive.sls  fixperms.sls  notify.sls  rollback.sls  task_djangosettings.sls  task_gtrois.sls  task_prepare_elevation_charts.sls  task_prepare_map_images.sls  task_superuser.sls
.salt/files/: config.py  gtrois.py  guillestrois.py  salt.cfg  settings.cfg  settings.ini  supervisor.initd  supervisor.service
benchmarking/: README.md  benchmark.sh  cypress.config.js  time_averages.py
block_templates/: 1image_3columns.html  1image_text6_text6.html  1image_text7_text5.html  3images_3columns.html  Valorisation - 2image et texte.html  image7_text5.html  slideshow.html  text6_image6.html
bulkimport/: __init__.py  parsers.44.py  parsers.py
caminae/: __init__.py  settings.py  translation.py  urls.py  views.py
caminae/auth/: admin.py  models.py  tests.py
caminae/authent/: __init__.py  admin.py  backend.py  decorators.py  factories.py  models.py  pyfixtures.py  tests.py
caminae/common/: admin.py  context_processors.py  factories.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
caminae/conf/: gunicorn-django.conf.in  gunicorn-tilecache.conf.in  logrotate.conf.in  nginx.conf.in  settings.ini.sample  supervisor.conf.in  tilecache.cfg.in  topdfserver.cfg.in
caminae/core/: admin.py  context_processors.py  entity.py  factories.py  fields.py  filters.py  forms.py  graph.py  management.py  models.py  tests.py  urls.py  views.py  widgets.py
caminae/infrastructure/: admin.py  factories.py  filters.py  forms.py  models.py  tests.py  urls.py  (+1 more)
conf/: buildout-dev.cfg  buildout-prod-standalone.cfg  buildout-prod.cfg  buildout-tests.cfg  buildout.cfg  convertit.cfg.in  custom.py  docker-compose.yml  docker.env  env.in  geotrek-nginx.conf  geotrek.service  gunicorn-geotrek.conf.py.in  gunicorn-geotrek_api.conf.py.in  gunicorn.conf.in  logrotate.conf.in  nginx.conf.in  nginxinc.conf.in  screamshotter.conf.in  settings-default.ini  settings.ini.sample  supervisor-geotrek-api.conf.in  supervisor-geotrek-celery.conf.in  supervisor-geotrek.conf.in  supervisor-program-env.conf.in  supervisor-program.conf.in  supervisor.conf.in  supervisor.service.in  tilecache.cfg  tilecache.cfg.in  topdfserver.cfg.in
css/: geotrek-style.css  owl.carousel.css  owl.theme.css  style-n1.css  style-n2.css  style-n3.css  style-n4.css  style-n5.css  style-n6.css  style.css
cypress/: custom.py  cypress.config.js  cypress.json  docker-compose-cypress.yml  nginx.conf  package-lock.json  package.json
data/: integration-rps.sql
debian/: changelog  conffiles  control  copyright  dirs  geotrek-admin.config  geotrek-admin.geotrek-api.service  geotrek-admin.geotrek-celery.service  geotrek-admin.geotrek-ui.service  geotrek-admin.links  geotrek-admin.logrotate  geotrek-admin.templates  geotrek-admin.triggers  geotrek-api.service  geotrek-celery.service  geotrek-ui.service  geotrek.service  install  postinst  postrm  rules
django-geojson/: CHANGES  README.rst  setup.py
docker/: Dockerfile  Dockerfile.debian.builder  Dockerfile.frontend  Dockerfile.frontend.host  deploy.sh  docker_push.sh  entrypoint.sh  initial.sh  load_data.sh  run.sh  update.sh
docs/: CONTRIBUTING.rst  Dockerfile  Makefile  advanced-configuration.rst  authors.rst  change-to-docker.rst  changelog.rst  conf.py  configuration.rst  deployment.rst  design.rst  development.rst  docker.rst  faq.rst  functional-tests.rst  history.rst  import.rst  index.rst  installation-docker.rst  installation.rst  integration-fr.rst  loading-data.rst  logo.ans  logo.svgz  maintenance.rst  pictograms.svgz  requirements.in  requirements.txt  sensitivity.rst  server-migration.rst  settings-custom-all-options.rst  synchronization.rst  toc-contribute.rst  toc-install.rst  toc-user.rst  translating.rst  translations.rst  troubleshooting.rst  update-docker.rst  update-to-docker.rst  (+3 more)
frontend/: .env.dist  .env.prod  .gitignore  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
geotrek/: VERSION  __init__.py  appconfig.py  asgi.py  celery.py  celery_tasks.py  context_processors.py  decorators.py  settings.py  templateloaders.py  test_global.py  test_runner.py  tests_migrations.py  translation.py  urls.py  wsgi.py
install/: .env.dist  Makefile  README.md  backup.sh  cleanup.sh  deplace_settings.py  docker-compose.yml  docker.env.dist  entrypoint.sh  geotrek-nginx.conf  geotrek.service  install.sh  upgrade.sh
js/: init.js
mapentity/: __init__.py  apps.py  context_processors.py  decorators.py  factories.py  filters.py  forms.py  helpers.py  middleware.py  models.py  registry.py  renderers.py  serializers.py  settings.py  shape_exporter.py  signals.py  tests.py  urlizor.py  urls.py  views.py  widgets.py
nginx/: Dockerfile  geotrek.conf
patches/: formfield_callback_inheritance_v2.diff
poc/: javascripts.cfg
requirements/: apt.txt  pip.txt
tools/: check_ign_key.sh  install-dev.sh  install.sh  migrate-dev.sh  migrate.sh  triggers_cascade_visualizers.py
(+3595 files in other folders)
